tests/neg-custom-args/captures/i25093.scala
def oneOf[A](as: List[DummyImplicit ?=> A]): A =
  as(0) // error